<resources>
    <string name="app_name">LoginScreen</string>
    <string name="txtLogin">Username</string>
    <string name="txtPassword">Password</string>
    <string name="loginHint">Enter a Username</string>
    <string name="passwordHint">Enter your Password</string>
    <string name="loginButtonText">Login</string>

    <string name="errMessageLogin">Invalid Login. Please Try Again</string>
    <string name="errMessagePassword">Invalid Password. Please Try Again</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="asscos">Associates Degree</string>
    <string name="certificate">Certificate</string>
    <string name="major">Major</string>
    <string name="txtNext">Next</string>
    <string-array name="arryCertificate">
        <item>Ios Certificate</item>
        <item>Android Certificate</item>
    </string-array>
    <string-array name="lstMajor">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>

    <string name="sectionClass"> Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II</string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRb1">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRb3">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb4">T/Th 4:00 PM - 5:50 PM</string>
    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRb6">M/W 12:00 PM - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>
    <string name="next">Next</string>


</resources>