<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <EditText
        android:id="@+id/idFName"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idLName"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toEndOf="@+id/idFName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idPhone"
        android:layout_width="122dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFName" />

    <EditText
        android:id="@+id/idPhoneEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLName" />

    <TextView
        android:id="@+id/idDob"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dob"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPhone" />

    <Spinner
        android:id="@+id/idMonths"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:entries="@array/months"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/idDob"
        app:layout_constraintTop_toBottomOf="@+id/idPhone" />

    <EditText
        android:id="@+id/idDay"
        android:layout_width="84dp"
        android:layout_height="51dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/idYear"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/idMonths"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneEntry" />

    <EditText
        android:id="@+id/idYear"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPhoneEntry" />

    <Switch
        android:id="@+id/switchDegree"
        android:layout_width="377dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="275dp"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMonths"
        tools:checked="false" />

    <TextView
        android:id="@+id/idText1"
        android:layout_width="66dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/certificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDob" />

    <TextView
        android:id="@+id/idText2"
        android:layout_width="75dp"
        android:layout_height="18dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:text="@string/asscos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idYear" />

    <Spinner
        android:id="@+id/idSpinnerCertificate"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:entries="@array/arryCertificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDegree" />

    <Spinner
        android:id="@+id/idSpinnerMajor"
        android:layout_width="117dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDegree" />

    <TextView
        android:id="@+id/txtCert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/certificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpinnerCertificate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="116dp"
        android:text="@string/major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpinnerMajor" />

    <Button
        android:id="@+id/idBtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/txtNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpinnerMajor"
        app:layout_constraintVertical_bias="0.513" />
</androidx.constraintlayout.widget.ConstraintLayout>